@@ -39,6 +39,8 @@ JH/02 Support "G" suffix to numbers in ${if comparisons.
 
 PP/08 Handle smtp transport tls_sni option forced-fail for OpenSSL.
 
+JH/03 Add expansion operators ${list:name} and ${nlist:string}
+
 
 Exim version 4.80
 -----------------
